# klt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  pyproject.toml
.dlt/: config.toml
.github/workflows/: run-etl.yml  run-klt.yml  run-ktl.yml
azure/: launch_container.sh  launch_container_full_history.sh  launch_container_test.sh  manual_creation_job_app.sh  manual_excution_klt_job_app.sh  push_image_acr.sh  setup_log_analytics_workspace.sh  setup_storage_for_dlt.sh
infra/: README.md  deploy.sh  deploy_containerapps.sh  main.bicep  parameters.json
infra/modules/: acr.bicep  containerapps-env.bicep  containerapps-job.bicep  keyvault.bicep
src/klt/: __init__.py  cli.py  kobotoolbox_pipeline.py  logging.py  rest_client.py  utils.py
src/klt/logging/: HTTP_LOGGING.md  __init__.py  dlt_logger.py  http_logger.py
src/klt/models/: __init__.py  project_view_assets.py
src/klt/resources/: HTTP_LOGGING.md  __init__.py  http_logger.py  kobo_asset.py  kobo_attachment.py  kobo_submission.py  kobo_view.py
tests/: conftest.py  test_kobo_asset_cursor_boundaries.py  test_kobo_asset_edge_cases.py  test_kobo_submission_basic.py  test_kobo_submission_cursor_behavior.py  test_kobo_submission_edge_cases.py  test_kobo_submission_normal_incremental.py  test_kobo_submission_per_asset_cursors.py  test_kobo_submission_transformation.py  test_resource_assets.py
tests/fixtures/: builders.py  pipeline.py  quality.py  stubs.py
