[project]
name = "klt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Iyed GHEDAMSI", email = "iyed.ghedamsi@impact-initiatives.org" }
]
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,postgres,workspace]>=1.17.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
klt = "klt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
