[project]
name = "klt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Iyed GHEDAMSI", email = "iyed.ghedamsi@impact-initiatives.org" }
]
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,workspace]>=1.17.1",
    "hypothesis>=6.142.4",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "pydantic[email]>=2.12.3",
    "requests-cache>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
klt = "klt:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "pytest-watcher>=0.4.3",
]
testing = [
    "hypothesis>=6.142.4",
    "hypothesis-jsonschema>=0.23.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
