[project]
name = "klt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Iyed GHEDAMSI", email = "iyed.ghedamsi@impact-initiatives.org" }
]
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,workspace]>=1.17.1",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "requests-cache>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
klt = "klt:cli.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "pytest-watcher>=0.4.3",
    "pytest-randomly>=4.0.1",
    "pytest-xdist",
    "pytest-deadfixtures>=2.2.1",
    "pytest-mock>=3.15.1",
    "ipython>=9.6.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
mock_use_standalone_module = true
